fix overflow hidden

--- a/app/assets/stylesheets/custom/_utilities_custom.scss
+++ b/app/assets/stylesheets/custom/_utilities_custom.scss
@@ -113,6 +113,10 @@
   color: #fff;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .overflow-y-auto {
   overflow: {
     x: hidden;
